--- a/locales/es.json
+++ b/locales/es.json
@@ -10,7 +10,7 @@
   "Try the pronunciation assessment again": "Intenta la evaluación de pronunciación nuevamente",
   "Enter text before starting recording": "Introduce texto antes de comenzar la grabación",
   "Recording": "Grabando",
-  "Listening...": "Escuchando...",
+  "Listening": "Escuchando",
   "Initial silence timeout! Please try again": "¡Tiempo de silencio inicial agotado! Por favor, inténtalo de nuevo",
   "Words with average scores": "Palabras con puntajes promedio",
   "Words with low scores": "Palabras con puntajes bajos",
