--- a/locales/pt.json
+++ b/locales/pt.json
@@ -10,7 +10,7 @@
   "Try the pronunciation assessment again": "Tente a avaliação de pronúncia novamente",
   "Enter text before starting recording": "Digite o texto antes de começar a gravar",
   "Recording": "Gravando",
-  "Listening...": "Ouvindo...",
+  "Listening": "Ouvindo",
   "Initial silence timeout! Please try again": "Tempo limite de silêncio inicial! Por favor, tente novamente",
   "Words with average scores": "Palavras com pontuações médias",
   "Words with low scores": "Palavras com pontuações baixas",
