feat: add get started

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,6 +9,7 @@
   "View profile": "View profile",
   "Try the pronunciation assessment again": "Try the pronunciation assessment again",
   "Enter text before starting recording": "Enter text before starting recording",
+  "When can you take lessons?": "When can you take lessons?",
   "Recording": "Recording",
   "Listening": "Listening",
   "Initial silence timeout! Please try again": "Initial silence timeout! Please try again",
@@ -63,12 +64,26 @@
   "Search language": "Search language",
   "No results found": "No results found",
   "Get started": "Get started",
-  "Find the right AI tutor for you.": "Find the right AI tutor for you.",
+  "Find the right AI tutor for you": "Find the right AI tutor for you",
   "What do you want to learn?": "What do you want to learn?",
   "What's your language level?": "What's your {lang} level?",
   "I'm just starting": "I'm just starting",
   "I know the basics": "I know the basics",
   "I'm conversational": "I'm conversational",
   "I'm fluent in most situations": "I'm fluent in most situations",
-  "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Tell us how you’d like to learn to get a personalized choice of AI tutors"
+  "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Tell us how you’d like to learn to get a personalized choice of AI tutors",
+  "You're almost there, just 1 steps to go!": "You're almost there, just {step} steps to go!",
+  "Next": "Next",
+  "Continue": "Continue",
+  "Skip this question": "Skip this question",
+  "English": "English",
+  "Spanish": "Spanish",
+  "French": "French",
+  "Portuguese": "Portuguese",
+  "Chinese (Mandarin)": "Chinese (Mandarin)",
+  "Morning": "Morning",
+  "Evening and night": "Evening and night",
+  "Daytime": "Daytime",
+  "Times": "Times",
+  "Days": "Days"
 }
