feat: add background sound

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,5 +85,6 @@
   "Evening and night": "Evening and night",
   "Daytime": "Daytime",
   "Times": "Times",
-  "Days": "Days"
+  "Days": "Days",
+  "Sign in to unlock the best of Lingos AI.": "Sign in to unlock the best of Lingos AI."
 }
