feat: add home page

--- a/locales/en.json
+++ b/locales/en.json
@@ -78,6 +78,7 @@
   "Skip this question": "Skip this question",
   "English": "English",
   "Spanish": "Spanish",
+  "Italian": "Italian",
   "French": "French",
   "Portuguese": "Portuguese",
   "Chinese (Mandarin)": "Chinese (Mandarin)",
@@ -86,5 +87,33 @@
   "Daytime": "Daytime",
   "Times": "Times",
   "Days": "Days",
-  "Sign in to unlock the best of Lingos AI.": "Sign in to unlock the best of Lingos AI."
+  "Sign in to unlock the best of Lingos AI": "Sign in to unlock the best of Lingos AI.",
+  "Get Started": "Get Started",
+  "Simplify your studies of a new language using artificial intelligence": "Simplify your studies of a new language using artificial intelligence",
+  "Our platform leverages artificial intelligence to make learning a new language simpler and more effective By using advanced AI algorithms, we provide personalized learning experiences that adapt to your individual needs and pace": "Our platform leverages artificial intelligence to make learning a new language simpler and more effective. By using advanced AI algorithms, we provide personalized learning experiences that adapt to your individual needs and pace.",
+  "Learning English opens doors to global opportunities, enhances your career prospects, expands access to information, and makes international travel easier": "Learning English opens doors to global opportunities, enhances your career prospects, expands access to information, and makes international travel easier.",
+  "Learning Italian allows you to appreciate Italy's rich culture, explore career opportunities in Italy, and immerse yourself in the history and art of iconic cities like Rome and Florence": "Learning Italian allows you to appreciate Italy's rich culture, explore career opportunities in Italy, and immerse yourself in the history and art of iconic cities like Rome and Florence.",
+  "Learning Spanish opens doors to immerse yourself in the vibrant Hispanic culture, enjoy new career opportunities in Spanish-speaking countries, and explore fascinating destinations like Barcelona, with its stunning architecture and rich history": "Learning Spanish opens doors to immerse yourself in the vibrant Hispanic culture, enjoy new career opportunities in Spanish-speaking countries, and explore fascinating destinations like Barcelona, with its stunning architecture and rich history.",
+  "Learning French allows you to immerse yourself in the sophisticated French culture, open doors to international career opportunities, and explore charming settings like the lush gardens of Versailles": "Learning French allows you to immerse yourself in the sophisticated French culture, open doors to international career opportunities, and explore charming settings like the lush gardens of Versailles.",
+  "Learning Portuguese provides immersion in the rich Lusophone culture, opens up career opportunities in Portuguese-speaking countries, and allows exploration of stunning landscapes like the paradise beaches of Brazil": "Learning Portuguese provides immersion in the rich Lusophone culture, opens up career opportunities in Portuguese-speaking countries, and allows exploration of stunning landscapes like the paradise beaches of Brazil.",
+  "All rights reserved": "All rights reserved.",
+  "Lingos AI": "Lingos AI",
+  "Terms of Service": "Terms of Service",
+  "Privacy": "Privacy",
+  "Need help?": "Need help?",
+  "Contact Us": "Contact Us",
+  "By proceeding, you agree to our": "By proceeding, you agree to our",
+  "Terms of Use": "Terms of Use",
+  "and confirm you have read our": "and confirm you have read our",
+  "Privacy and Cookie Statement": "Privacy and Cookie Statement.",
+  "An error occurred with ReCAPTCHA, please try again later :(": "An error occurred with ReCAPTCHA, please try again later :(",
+  "Contact support if you see this error": "Contact support if you see this error.",
+  "Undo": "Undo",
+  "This site is protected by reCAPTCHA and the": "This site is protected by reCAPTCHA and the",
+  "Google Privacy Policy": "Google Privacy Policy",
+  "and": "and",
+  "apply": "apply.",
+  "apply (nd)": "apply",
+  "Continue with Google": "Continue with Google",
+  "Go to login page": "Go to login page"
 }
