--- a/locales/es.json
+++ b/locales/es.json
@@ -1,63 +1,119 @@
 {
-  "Conversation": "Conversación",
-  "Learn by talking to the AI": "Aprende hablando con la IA",
-  "Send": "Enviar",
-  "Translation and definition of vocabulary": "Traducción y definición de vocabulario",
-  "Delete": "Eliminar",
-  "Enter your message": "Introduce tu mensaje",
-  "Created at:": "Creado en:",
-  "View profile": "Ver perfil",
-  "Try the pronunciation assessment again": "Intenta la evaluación de pronunciación nuevamente",
-  "Enter text before starting recording": "Introduce texto antes de comenzar la grabación",
-  "Recording": "Grabando",
-  "Listening": "Escuchando",
-  "Initial silence timeout! Please try again": "¡Tiempo de silencio inicial agotado! Por favor, inténtalo de nuevo",
-  "Words with average scores": "Palabras con puntajes promedio",
-  "Words with low scores": "Palabras con puntajes bajos",
-  "Words with high scores": "Palabras con puntajes altos",
-  "Pronunciation assessment": "Evaluación de pronunciación",
-  "Accuracy Score": "Puntuación de precisión",
-  "Completeness Score": "Puntuación de completitud",
-  "Fluency Score": "Puntuación de fluidez",
-  "Pronunciation Score": "Puntuación de pronunciación",
-  "Prosody Score": "Puntuación de prosodia",
-  "Your average score is": "Tu puntaje promedio es",
-  "Jan": "Ene",
-  "Feb": "Feb",
-  "Mar": "Mar",
-  "Apr": "Abr",
-  "May": "May",
-  "Jun": "Jun",
-  "Jul": "Jul",
-  "Aug": "Ago",
-  "Sep": "Sep",
-  "Oct": "Oct",
-  "Nov": "Nov",
-  "Dec": "Dic",
-  "January": "Enero",
-  "February": "Febrero",
-  "March": "Marzo",
-  "April": "Abril",
-  "June": "Junio",
-  "July": "Julio",
-  "August": "Agosto",
-  "September": "Septiembre",
-  "October": "Octubre",
-  "November": "Noviembre",
-  "December": "Diciembre",
-  "Sun": "Dom",
-  "Mon": "Lun",
-  "Tue": "Mar",
-  "Wed": "Mié",
-  "Thu": "Jue",
-  "Fri": "Vie",
-  "Sat": "Sáb",
-  "Sunday": "Domingo",
-  "Monday": "Lunes",
-  "Tuesday": "Martes",
-  "Wednesday": "Miércoles",
-  "Thursday": "Jueves",
-  "Friday": "Viernes",
-  "Saturday": "Sábado",
-  "Words Omitted": "Palabras omitidas"
+    "Conversation": "Conversación",
+    "Learn by talking to the AI": "Aprende hablando con la IA",
+    "Send": "Enviar",
+    "Translation and definition of vocabulary": "Traducción y definición de vocabulario",
+    "Delete": "Eliminar",
+    "Enter your message": "Introduce tu mensaje",
+    "Created at:": "Creado en:",
+    "View profile": "Ver perfil",
+    "Try the pronunciation assessment again": "Intenta la evaluación de pronunciación nuevamente",
+    "Enter text before starting recording": "Introduce texto antes de comenzar la grabación",
+    "Recording": "Grabando",
+    "Listening": "Escuchando",
+    "Initial silence timeout! Please try again": "¡Tiempo de silencio inicial agotado! Por favor, inténtalo de nuevo",
+    "Words with average scores": "Palabras con puntajes promedio",
+    "Words with low scores": "Palabras con puntajes bajos",
+    "Words with high scores": "Palabras con puntajes altos",
+    "Pronunciation assessment": "Evaluación de pronunciación",
+    "Accuracy Score": "Puntuación de precisión",
+    "Completeness Score": "Puntuación de completitud",
+    "Fluency Score": "Puntuación de fluidez",
+    "Pronunciation Score": "Puntuación de pronunciación",
+    "Prosody Score": "Puntuación de prosodia",
+    "Your average score is": "Tu puntaje promedio es",
+    "Jan": "Ene",
+    "Feb": "Feb",
+    "Mar": "Mar",
+    "Apr": "Abr",
+    "May": "May",
+    "Jun": "Jun",
+    "Jul": "Jul",
+    "Aug": "Ago",
+    "Sep": "Sep",
+    "Oct": "Oct",
+    "Nov": "Nov",
+    "Dec": "Dic",
+    "January": "Enero",
+    "February": "Febrero",
+    "March": "Marzo",
+    "April": "Abril",
+    "June": "Junio",
+    "July": "Julio",
+    "August": "Agosto",
+    "September": "Septiembre",
+    "October": "Octubre",
+    "November": "Noviembre",
+    "December": "Diciembre",
+    "Sun": "Dom",
+    "Mon": "Lun",
+    "Tue": "Mar",
+    "Wed": "Mié",
+    "Thu": "Jue",
+    "Fri": "Vie",
+    "Sat": "Sáb",
+    "Sunday": "Domingo",
+    "Monday": "Lunes",
+    "Tuesday": "Martes",
+    "Wednesday": "Miércoles",
+    "Thursday": "Jueves",
+    "Friday": "Viernes",
+    "Saturday": "Sábado",
+    "Words Omitted": "Palabras omitidas",
+    "Need help?": "¿Necesitas ayuda?",
+    "All rights reserved": "Todos los derechos reservados",
+    "Lingos AI": "Lingos AI",
+    "Terms of Service": "Términos de servicio",
+    "Privacy": "Privacidad",
+    "Contact Us": "Contáctenos",
+    "Learning Spanish opens doors to immerse yourself in the vibrant Hispanic culture, enjoy new career opportunities in Spanish-speaking countries, and explore fascinating destinations like Barcelona, with its stunning architecture and rich history": "Aprender español abre puertas para sumergirse en la vibrante cultura hispana, disfrutar de nuevas oportunidades laborales en países de habla española y explorar destinos fascinantes como Barcelona, con su impresionante arquitectura y rica historia",
+    "Learning French allows you to immerse yourself in the sophisticated French culture, open doors to international career opportunities, and explore charming settings like the lush gardens of Versailles": "Aprender francés te permite sumergirte en la sofisticada cultura francesa, abrir puertas a oportunidades profesionales internacionales y explorar lugares encantadores como los exuberantes jardines de Versalles",
+    "Learning Portuguese provides immersion in the rich Lusophone culture, opens up career opportunities in Portuguese-speaking countries, and allows exploration of stunning landscapes like the paradise beaches of Brazil": "Aprender portugués brinda inmersión en la rica cultura lusófona, abre oportunidades laborales en países de habla portuguesa y permite la exploración de paisajes impresionantes como las playas paradisíacas de Brasil",
+    "Search language": "Buscar idioma",
+    "No results found": "No se encontraron resultados",
+    "Get started": "Empezar",
+    "Find the right AI tutor for you": "Encuentra el tutor de IA adecuado para ti",
+    "What do you want to learn?": "¿Qué quieres aprender?",
+    "What's your language level?": "¿Cuál es tu nivel de {lang}?",
+    "I'm just starting": "Estoy comenzando",
+    "I know the basics": "Conozco lo básico",
+    "I'm conversational": "Tengo habilidades de conversación",
+    "I'm fluent in most situations": "Hablo fluidamente en la mayoría de las situaciones",
+    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Cuéntanos cómo te gustaría aprender para obtener una selección personalizada de tutores de IA",
+    "You're almost there, just 1 steps to go!": "¡Casi estás listo, solo faltan {step} pasos!",
+    "Next": "Siguiente",
+    "Continue": "Continuar",
+    "Skip this question": "Saltar esta pregunta",
+    "English": "Inglés",
+    "Spanish": "Español",
+    "Italian": "Italiano",
+    "Portuguese": "Portugués",
+    "Chinese (Mandarin)": "Chino (Mandarín)",
+    "Morning": "Mañana",
+    "Evening and night": "Noche y noche",
+    "Daytime": "Hora del día",
+    "Times": "Veces",
+    "Days": "Días",
+    "Sign in to unlock the best of Lingos AI": "Inicia sesión para desbloquear lo mejor de Lingos AI",
+    "Get Started": "Empezar",
+    "Simplify your studies of a new language using artificial intelligence": "Simplifica tus estudios de un nuevo idioma utilizando inteligencia artificial",
+    "Our platform leverages artificial intelligence to make learning a new language simpler and more effective By using advanced AI algorithms, we provide personalized learning experiences that adapt to your individual needs and pace": "Nuestra plataforma aprovecha la inteligencia artificial para hacer que el aprendizaje de un nuevo idioma sea más simple y efectivo. Mediante el uso de algoritmos de IA avanzados, ofrecemos experiencias de aprendizaje personalizadas que se adaptan a tus necesidades y ritmo individuales",
+    "Learning English opens doors to global opportunities, enhances your career prospects, expands access to information, and makes international travel easier": "Aprender inglés abre puertas a oportunidades globales, mejora tus perspectivas de carrera, amplía el acceso a la información y facilita los viajes internacionales",
+    "Learning Italian allows you to appreciate Italy's rich culture, explore career opportunities in Italy, and immerse yourself in the history and art of iconic cities like Rome and Florence": "Aprender italiano te permite apreciar la rica cultura de Italia, explorar oportunidades de carrera en Italia y sumergirte en la historia y el arte de ciudades icónicas como Roma y Florencia",
+    "French": "Francés",
+    "When can you take lessons?": "Cuando puedes tomar lecciones?",
+    "By proceeding, you agree to our": "Ao prosseguir, você concorda com nossos",
+    "Terms of Use": "Termos de Uso",
+    "and confirm you have read our": "e confirma que leu nossa",
+    "Privacy and Cookie Statement": "Declaração de Privacidade e Cookies.",
+    "An error occurred with ReCAPTCHA, please try again later :(": "Ocorreu um erro com o ReCAPTCHA, por favor tente novamente mais tarde :(",
+    "Contact support if you see this error": "Entre em contato com o suporte se você ver esse erro.",
+    "Undo": "Desfazer",
+    "This site is protected by reCAPTCHA and the": "Este site está protegido pelo reCAPTCHA e pela",
+    "Google Privacy Policy": "Política de Privacidade do Google",
+    "and": "e",
+    "apply": "aplicar",
+    "apply (nd)": "aplicar",
+    "Continue with Google": "Continuar com o Google",
+    "Go to login page": "Ir para a página de login"
 }
