--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,63 +1,119 @@
 {
-  "Conversation": "Conversa",
-  "Learn by talking to the AI": "Aprender conversando com a IA",
-  "Send": "Enviar",
-  "Translation and definition of vocabulary": "Tradução e definição de vocabulário",
-  "Delete": "Apagar",
-  "Enter your message": "Digite sua mensagem",
-  "Created at:": "Criado em:",
-  "View profile": "Ver perfil",
-  "Try the pronunciation assessment again": "Tente a avaliação de pronúncia novamente",
-  "Enter text before starting recording": "Digite o texto antes de começar a gravar",
-  "Recording": "Gravando",
-  "Listening": "Ouvindo",
-  "Initial silence timeout! Please try again": "Tempo limite de silêncio inicial! Por favor, tente novamente",
-  "Words with average scores": "Palavras com pontuações médias",
-  "Words with low scores": "Palavras com pontuações baixas",
-  "Words with high scores": "Palavras com pontuações altas",
-  "Pronunciation assessment": "Avaliação de pronúncia",
-  "Accuracy Score": "Pontuação de precisão",
-  "Completeness Score": "Pontuação de completude",
-  "Fluency Score": "Pontuação de fluência",
-  "Pronunciation Score": "Pontuação de pronúncia",
-  "Prosody Score": "Pontuação de prosódia",
-  "Your average score is": "Sua pontuação média é",
-  "Jan": "Jan",
-  "Feb": "Fev",
-  "Mar": "Mar",
-  "Apr": "Abr",
-  "May": "Mai",
-  "Jun": "Jun",
-  "Jul": "Jul",
-  "Aug": "Ago",
-  "Sep": "Set",
-  "Oct": "Out",
-  "Nov": "Nov",
-  "Dec": "Dez",
-  "January": "Janeiro",
-  "February": "Fevereiro",
-  "March": "Março",
-  "April": "Abril",
-  "June": "Junho",
-  "July": "Julho",
-  "August": "Agosto",
-  "September": "Setembro",
-  "October": "Outubro",
-  "November": "Novembro",
-  "December": "Dezembro",
-  "Sun": "Dom",
-  "Mon": "Seg",
-  "Tue": "Ter",
-  "Wed": "Qua",
-  "Thu": "Qui",
-  "Fri": "Sex",
-  "Sat": "Sáb",
-  "Sunday": "Domingo",
-  "Monday": "Segunda-feira",
-  "Tuesday": "Terça-feira",
-  "Wednesday": "Quarta-feira",
-  "Thursday": "Quinta-feira",
-  "Friday": "Sexta-feira",
-  "Saturday": "Sábado",
-  "Words Omitted": "Palavras omitidas"
+    "Conversation": "Conversa",
+    "Learn by talking to the AI": "Aprender conversando com a IA",
+    "Send": "Enviar",
+    "Translation and definition of vocabulary": "Tradução e definição de vocabulário",
+    "Delete": "Apagar",
+    "Enter your message": "Digite sua mensagem",
+    "Created at:": "Criado em:",
+    "View profile": "Ver perfil",
+    "Try the pronunciation assessment again": "Tente a avaliação de pronúncia novamente",
+    "Enter text before starting recording": "Digite o texto antes de começar a gravar",
+    "Recording": "Gravando",
+    "Listening": "Ouvindo",
+    "Initial silence timeout! Please try again": "Tempo limite de silêncio inicial! Por favor, tente novamente",
+    "Words with average scores": "Palavras com pontuações médias",
+    "Words with low scores": "Palavras com pontuações baixas",
+    "Words with high scores": "Palavras com pontuações altas",
+    "Pronunciation assessment": "Avaliação de pronúncia",
+    "Accuracy Score": "Pontuação de precisão",
+    "Completeness Score": "Pontuação de completude",
+    "Fluency Score": "Pontuação de fluência",
+    "Pronunciation Score": "Pontuação de pronúncia",
+    "Prosody Score": "Pontuação de prosódia",
+    "Your average score is": "Sua pontuação média é",
+    "Jan": "Jan",
+    "Feb": "Fev",
+    "Mar": "Mar",
+    "Apr": "Abr",
+    "May": "Mai",
+    "Jun": "Jun",
+    "Jul": "Jul",
+    "Aug": "Ago",
+    "Sep": "Set",
+    "Oct": "Out",
+    "Nov": "Nov",
+    "Dec": "Dez",
+    "January": "Janeiro",
+    "February": "Fevereiro",
+    "March": "Março",
+    "April": "Abril",
+    "June": "Junho",
+    "July": "Julho",
+    "August": "Agosto",
+    "September": "Setembro",
+    "October": "Outubro",
+    "November": "Novembro",
+    "December": "Dezembro",
+    "Sun": "Dom",
+    "Mon": "Seg",
+    "Tue": "Ter",
+    "Wed": "Qua",
+    "Thu": "Qui",
+    "Fri": "Sex",
+    "Sat": "Sáb",
+    "Sunday": "Domingo",
+    "Monday": "Segunda-feira",
+    "Tuesday": "Terça-feira",
+    "Wednesday": "Quarta-feira",
+    "Thursday": "Quinta-feira",
+    "Friday": "Sexta-feira",
+    "Saturday": "Sábado",
+    "Words Omitted": "Palavras omitidas",
+    "When can you take lessons?": "Quando você pode fazer aulas?",
+    "Search language": "Pesquisar idioma",
+    "No results found": "Nenhum resultado encontrado",
+    "Get started": "Começar",
+    "Find the right AI tutor for you": "Encontre o tutor de IA certo para você",
+    "What do you want to learn?": "O que você quer aprender?",
+    "I'm just starting": "Estou começando",
+    "I know the basics": "Eu conheço o básico",
+    "I'm conversational": "Eu consigo conversar",
+    "I'm fluent in most situations": "Sou fluente na maioria das situações",
+    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Diga-nos como você gostaria de aprender para obter uma escolha personalizada de tutores de IA",
+    "You're almost there, just 1 steps to go!": "Você está quase lá, apenas mais {step} etapa a percorrer!",
+    "Next": "Próximo",
+    "Continue": "Continuar",
+    "Skip this question": "Pular esta pergunta",
+    "English": "Inglês",
+    "Spanish": "Espanhol",
+    "Italian": "Italiano",
+    "French": "Francês",
+    "Portuguese": "Português",
+    "Chinese (Mandarin)": "Chinês (Mandarim)",
+    "Morning": "Manhã",
+    "Evening and night": "Noite e madrugada",
+    "Daytime": "Durante o dia",
+    "Times": "Horários",
+    "Days": "Dias",
+    "Sign in to unlock the best of Lingos AI": "Faça login para desbloquear o melhor do Lingos AI",
+    "Get Started": "Começar",
+    "Simplify your studies of a new language using artificial intelligence": "Simplifique seus estudos de um novo idioma usando inteligência artificial",
+    "All rights reserved": "Todos os direitos reservados",
+    "Lingos AI": "Lingos AI",
+    "Privacy": "Privacidade",
+    "Contact Us": "Contate-nos",
+    "Need help?": "Precisa de ajuda?",
+    "Terms of Service": "Termos de Serviço",
+    "What's your language level?": "Qual é o seu nível de {lang}?",
+    "Our platform leverages artificial intelligence to make learning a new language simpler and more effective By using advanced AI algorithms, we provide personalized learning experiences that adapt to your individual needs and pace": "Nossa plataforma utiliza inteligência artificial para tornar o aprendizado de um novo idioma mais simples e eficaz. Por meio de algoritmos avançados de IA, oferecemos experiências de aprendizado personalizadas que se adaptam às suas necessidades e ritmo individuais.",
+    "Learning English opens doors to global opportunities, enhances your career prospects, expands access to information, and makes international travel easier": "Aprender inglês abre portas para oportunidades globais, melhora suas perspectivas de carreira, expande o acesso à informação e facilita viagens internacionais.",
+    "Learning Italian allows you to appreciate Italy's rich culture, explore career opportunities in Italy, and immerse yourself in the history and art of iconic cities like Rome and Florence": "Aprender italiano permite que você aprecie a rica cultura da Itália, explore oportunidades de carreira na Itália e mergulhe na história e na arte de cidades icônicas como Roma e Florença.",
+    "Learning Spanish opens doors to immerse yourself in the vibrant Hispanic culture, enjoy new career opportunities in Spanish-speaking countries, and explore fascinating destinations like Barcelona, with its stunning architecture and rich history": "Aprender espanhol abre portas para se envolver na vibrante cultura hispânica, aproveitar novas oportunidades de carreira em países de língua espanhola e explorar destinos fascinantes como Barcelona, com sua arquitetura deslumbrante e rica história.",
+    "Learning French allows you to immerse yourself in the sophisticated French culture, open doors to international career opportunities, and explore charming settings like the lush gardens of Versailles": "Aprender francês permite que você mergulhe na sofisticada cultura francesa, abra portas para oportunidades de carreira internacionais e explore cenários encantadores como os luxuriantes jardins de Versalhes.",
+    "Learning Portuguese provides immersion in the rich Lusophone culture, opens up career opportunities in Portuguese-speaking countries, and allows exploration of stunning landscapes like the paradise beaches of Brazil": "Aprender português proporciona imersão na rica cultura lusófona, abre oportunidades de carreira em países de língua portuguesa e permite a exploração de paisagens deslumbrantes, como as praias paradisíacas do Brasil.",
+    "By proceeding, you agree to our": "Ao prosseguir, você concorda com nossos",
+    "Terms of Use": "Termos de Uso",
+    "and confirm you have read our": "e confirma que leu nossa",
+    "Privacy and Cookie Statement": "Declaração de Privacidade e Cookies.",
+    "An error occurred with ReCAPTCHA, please try again later :(": "Ocorreu um erro com o ReCAPTCHA, por favor tente novamente mais tarde :(",
+    "Contact support if you see this error": "Entre em contato com o suporte se você visualizar esse erro.",
+    "Undo": "Desfazer",
+    "This site is protected by reCAPTCHA and the": "Este site é protegido pelo reCAPTCHA e pelo",
+    "Google Privacy Policy": "Política de Privacidade do Google",
+    "and": "e",
+    "apply": "aceite",
+    "apply (nd)": "aceite",
+    "Continue with Google": "Continuar com o Google",
+    "Go to login page": "Ir para a página de login"
 }
