--- a/locales/fr.json
+++ b/locales/fr.json
@@ -162,5 +162,19 @@
     "any type of illegal pornography, terrorism advocacy or against human rights;": "tout type de pornographie illégale, d'apologie du terrorisme ou contraire aux droits de l'homme;",
     "C) Not to cause damage to the physical (hardware) and logical (software) systems of Lingos AI, its suppliers or third parties, to introduce or spread computer viruses or any other hardware or software systems that are capable of causing the damage mentioned above": "C) Ne pas causer de dommages aux systèmes physiques (matériel) et logiques (logiciel) de Lingos AI, à ses fournisseurs ou à des tiers, ni introduire ni propager des virus informatiques ou tout autre système matériel ou logiciel capable de causer les dommages mentionnés ci-dessus.",
     "We hope this is clarified, and as previously mentioned, if there is something that you are not sure whether you need or not, it is generally safer to leave cookies enabled, if it interacts with one of the features you use on our site": "Nous espérons que ceci est clarifié, et comme mentionné précédemment, s'il y a quelque chose dont vous n'êtes pas sûr d'avoir besoin ou non, il est généralement plus sûr de laisser les cookies activés, s'ils interagissent avec l'une des fonctionnalités que vous utilisez sur notre site.",
-    "This policy is effective as of June 5, 2024 19:21": "Cette politique est en vigueur à compter du 5 juin 2024 à 19h21."
+    "This policy is effective as of June 5, 2024 19:21": "Cette politique est en vigueur à compter du 5 juin 2024 à 19h21.",
+    "Your goal is to learn 5000 words this year, 400 words remaining": "Votre objectif est d'apprendre {wordsPerYear} <questionHelp></questionHelp> mots cette année, {wordsPerYearRemaining} mots restants.",
+    "For fluency, you may need to learn from 5000 to 10000 words": "Pour la fluidité, vous devrez peut-être apprendre entre {wordsMin} et {wordsMax} mots.",
+    "It's only 14 words a day, you can do it!": "Ce ne sont que {words} mots par jour, vous pouvez le faire!",
+    "All the words you learned in the year 2024": "Tous les mots que vous avez appris en {year}",
+    "This year": "Cette année",
+    "This month": "Ce mois-ci",
+    "Today": "Aujourd'hui",
+    "Green words": "Mots verts",
+    "Yellow words": "Mots jaunes",
+    "Red words": "Mots rouges",
+    "Annual goal: 5000 words, 400 remaining": "Objectif annuel : {words} mots, {remaining} restants",
+    "Words you have already encountered": "Mots que vous avez déjà rencontrés",
+    "Monthly goal: 400 words, 200 remaining": "Objectif mensuel : {words} mots, {remaining} restants",
+    "Today's goal: 14 words, 0 remaining": "Objectif du jour : {words} mots, {remaining} restants"
 }
